force-app/main/default/objects/nRetail__Income__c/nRetail__Income__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED- The income object stores details about an applicant&apos;s income.</description>
    <label>-D Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>