force-app/main/default/objects/nRetail__Income__c/fields/nRetail__Account__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and represents the account to which this income belongs.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>