force-app/main/default/objects/nRetail__Income__c/fields/nRetail__Contact__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional and represents the contact who has this income.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>