force-app/main/default/objects/nRetail__Income__c/fields/nRetail__Income_Source__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Income_Source__c</fullName>
    <description>This field is optional and represents the source of the applicant&apos;s income.</description>
    <label>Income Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Stubs</fullName>
            </value>
            <value>
                <fullName>Tax Return</fullName>
            </value>
            <value>
                <fullName>W2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>