force-app/main/default/objects/nRetail__Income__c/fields/nRetail__Income_Type__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Income_Type__c</fullName>
    <description>This field is required and represents the type of income.</description>
    <label>Income Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimony Support</fullName>
            </value>
            <value>
                <fullName>Annual Bonus/Commission</fullName>
            </value>
            <value>
                <fullName>Gross Annual Income</fullName>
            </value>
            <value>
                <fullName>Investment/Trust Income</fullName>
            </value>
            <value>
                <fullName>Military Income</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
            <value>
                <fullName>Part Time Income</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Self Employment Income</fullName>
            </value>
            <value>
                <fullName>Taxable Income</fullName>
            </value>
            <value>
                <fullName>Total Before Tax Income</fullName>
            </value>
            <value>
                <fullName>Unemployment Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>