force-app/main/default/objects/nRetail__Income__c/fields/nRetail__Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Monthly_Income__c</fullName>
    <description>This field is required and represents the amount of an applicant&apos;s monthly income.</description>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>