force-app/main/default/objects/nRetail__Income__c/fields/nRetail__Yearly_Income__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Yearly_Income__c</fullName>
    <description>This field is optional and represents the amount of an applicant&apos;s yearly income.</description>
    <label>Yearly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>