force-app/main/default/objects/nRetail__Income__c/validationRules/nRetail__Monthly_Yearly_Income.validationRule-meta.xml
<ValidationRule>
    <fullName>nRetail__Monthly_Yearly_Income</fullName>
    <active>true</active>
    <description>Monthly income must be 1/12 of yearly income.</description>
    <errorConditionFormula>nRetail__Monthly_Income__c != ROUND(nRetail__Yearly_Income__c/12,2)</errorConditionFormula>
    <errorMessage>Monthly income must be 1/12 of yearly income.</errorMessage>
</ValidationRule>